style: fix text wrap

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body{
     height: 100vh;
     width: 100vw;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,7 +26,6 @@ body{
 }
 
 .container .menu-btns{
-    /* background-color: salmon; */
     width: 100%;
     display: flex;
     align-items: center;
@@ -59,13 +58,12 @@ body{
 
 
 .container .item-title{
-    /* background-color: aqua; */
     width: 100%;
     position: relative;
 }
 
 .item-title .bar{
-    height: 5px;
+    height: 3px;
     width: 100%;
     background-color: tomato;
     position: absolute;
@@ -82,9 +80,8 @@ body{
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    /* padding: 5px 15px; */
     height: 70px;
-    width: 200px;
+    width: 250px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -93,16 +90,15 @@ body{
 .type .icon{
     font-size: 40px;
 }
-.type .type-title{
+.type .menu-type{
     color: tomato;
-    font-size: 30px;
+    font-size: 24px;
     text-transform: capitalize;
 }
 
 
 
 .menu-list{
-    background-color: honeydew;
     width: 100%;
     height: 500px;
     display: flex;
@@ -114,12 +110,15 @@ body{
 .menu-list .menu-panel{
     width: 380px;
     height: 140px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     padding: 10px;
     border-radius: 5px;
-    border-bottom: 2px solid tomato;
     display: flex;
     align-items: center;
+}
+
+.menu-list .menu-panel:hover{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .menu-panel img{
@@ -127,13 +126,17 @@ body{
 }
 
 .menu-panel .desc{
-    background-color: navajowhite;
     padding-left: 15px;
     width: 250px;
     height: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
 }
 
 .menu-panel .desc > div{
+    width: 100%;
     font-weight: bold;
     display: flex;
     align-items: center;
@@ -142,12 +145,8 @@ body{
 }
 
 
-.menu-panel .desc .ingredients{
-    width: 100%;
-    background-color: tan;
-    font-size: 14px;
-    overflow-wrap: break-word;
-    word-break: normal;
-    display: inline-block;
+.desc .ingredients{
+    width: fit-content;
+    font-size: 16px;
 }
 
